[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["bruce <cnhxunoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = "^0.2.42"
requests = "^2.31.0"
gguf = "^0.6.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
yapf = "^0.40.2"
ruff = "^0.2.1"
types-requests = "^2.31.0.20240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
